--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -1,6 +1,6 @@
 {{define "top"}}
 <!DOCTYPE html>
-<html lang="[[[Language]]]" data-bs-theme="light">
+<html lang="[[[Language]]]">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
