--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="flex-center p-4 border-start">
-          <button id="changeTier" class="btn btn-outline-secondary">[[[Change Tier]]]</button>
+          <button id="changeTier">[[[Change Tier]]]</button>
         </div>
       </div>
       <hr class="mb-1">
@@ -73,18 +73,18 @@
     <div class="fs15 pt-3 text-center d-hide text-danger text-break" id="errMsg"></div>
     <div class="settings">
       <div{{if .Exchange.ViewOnly}} class="d-hide"{{end}}>
-        <button id="exportDexBtn" class="btn btn-outline-secondary">[[[Export Account]]]</button>
+        <button id="exportDexBtn">[[[Export Account]]]</button>
       </div>
       <div>
-        <button id="disableAcctBtn" class="btn btn-outline-secondary">[[[Disable Account]]]</button>
+        <button id="disableAcctBtn">[[[Disable Account]]]</button>
       </div>
       <div>
         <input type="file" class="form-control select d-none" id="certFileInput">
-        <button id="updateCertBtn" class="btn btn-outline-secondary">[[[Update TLS Certificate]]]</button>
+        <button id="updateCertBtn">[[[Update TLS Certificate]]]</button>
         <span class="mx-2 d-hide text-success" id="updateCertMsg">[[[successful_cert_update]]]</span>
       </div>
       <div>
-        <button id="updateHostBtn" class="btn btn-outline-secondary">[[[update dex host]]]</button>
+        <button id="updateHostBtn">[[[update dex host]]]</button>
       </div>
     </div>
   </div>
