--- a/client/webserver/site/src/css/components.scss
+++ b/client/webserver/site/src/css/components.scss
@@ -2,30 +2,95 @@
 @import "~bootstrap/scss/mixins";
 @import "mixins";
 
+
+button {
+  background-color: transparent;
+  border: 1px solid var(--btn-border-color);
+  border-radius: 5px;
+  outline: none;
+  padding: 0.375rem 0.75rem;
+  user-select: none;
+  font-size: 1rem;
+  color: var(--text-color);
+  white-space: nowrap;
+
+  &.selected {
+    background-color: #38cfb0;
+    border: none;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:hover {
+    text-decoration: none;
+    border-color: var(--btn-hover-border-color);
+    background-color: #7772;
+  }
+
+  &.small {
+    padding: 0.25rem 0.5rem;
+    font-size: .8rem;
+  }
+
+  &.large {
+    padding: 0.5rem 1rem;
+    font-size: 1.25rem;
+  }
+
+  &.feature {
+    background-color: var(--btn-feature-bg);
+    border-color: var(--btn-feature-border-color);
+
+    &:hover {
+      background-color: var(--btn-feature-hover-bg);
+      border-color: var(--btn-featur-hover-border-color);
+    }
+  }
+
+  &.danger {
+    border-color: var(--btn-danger);
+    color: var(--btn-danger);
+
+    &:hover {
+      background-color: var(--btn-danger);
+      color: var(--btn-danger-hover-color);
+    }
+  }
+
+  &.go {
+    background-color: var(--btn-go-bg);
+    color: var(--btn-go-color);
+
+    &:hover {
+      background-color: var(--btn-go-hover-bg);
+    }
+  }
+}
+
 // tables
 .table {
-  @extend .table;
+  color: var(--text-color);
+  border-collapse: collapse;
+  width: 100%;
 
-  --#{$prefix}table-bg: transparent;
+  th,
+  td {
+    padding: 0.5rem;
+  }
+
+  tr {
+    border: 1px solid var(--border-color);
+  }
 
   .table-group-divider {
-    border-color: var(--bs-border-color)
+    border-color: var(--border-color)
   }
 }
 
 .table-bordered {
   @include border;
-}
-
-// buttons
-.btn-xs {
-  padding: .10rem .5rem;
-  font-size: .75rem;
-}
-
-.btn-outline-secondary {
-  color: var(--bs-body-color);
-  border-color: var(--bs-border-color);
 }
 
 // form components
@@ -108,14 +173,13 @@ input:invalid {
   max-width: 300px;
   font-size: 15px;
   border-radius: 4px;
-  color: var(--bs-body-bg);
-  background-color: var(--bs-body-color);
+  background-color: var(--body-bg);
 
   @include border;
 }
 
 .panel {
-  background-color: var(--bs-secondary-bg);
+  background-color: var(--body-bg-secondary);
 }
 
 .on-indicator {
@@ -148,7 +212,7 @@ div[data-handler=wallets] {
 
     @include border;
 
-    background-color: var(--bs-secondary-bg);
+    background-color: var(--body-bg-secondary);
     box-shadow: 0 3px 6px #00000021, 0 2px 7px #00000041;
   }
 }
