--- a/client/webserver/site/src/html/init.tmpl
+++ b/client/webserver/site/src/html/init.tmpl
@@ -30,7 +30,7 @@
         <textarea class="form-control select mono d-hide" id="seedInput" rows="4" autocomplete="off" spellcheck="false"></textarea>
       </div>
       <div class="d-flex justify-content-end">
-        <button id="appPWSubmit" type="submit" class="btn btn-success px-4">[[[Submit]]]</button>
+        <button id="appPWSubmit" type="submit" class="go px-4">[[[Submit]]]</button>
       </div>
       <div class="fs15 pt-3 text-center d-hide text-danger text-break" id="appPWErrMsg"></div>
     </form>
@@ -57,7 +57,7 @@
         </div>
         <hr class="dashed my-3">
         <div class="flex-center">
-          <button id="quickConfigSubmit" type="submit" class="btn btn-success px-4">[[[Submit]]]</button>
+          <button id="quickConfigSubmit" type="submit" class="go px-4">[[[Submit]]]</button>
         </div>
       </div>
 
@@ -90,7 +90,7 @@
           [[[seed_backup_implore]]]
         </div>
         <div class="flex-center mb-3">
-          <button id="showSeed" class="btn btn-success px-4">[[[Backup Now]]]</button>
+          <button id="showSeed" class="go px-4">[[[Backup Now]]]</button>
         </div>
         <hr class="dashed my-3">
         <div class="d-flex justify-content-end">
@@ -107,7 +107,7 @@
           <pre class="fs18 mono mx-auto user-select-all text-break" id="mnemonic"></pre>
         </div>
         <div class="d-flex justify-content-end">
-          <button id="seedAck" class="btn btn-success px-4">[[[Done]]]</button>
+          <button id="seedAck" class="go px-4">[[[Done]]]</button>
         </div>
       </div>
     </form>
