--- a/client/webserver/site/src/html/orders.tmpl
+++ b/client/webserver/site/src/html/orders.tmpl
@@ -13,7 +13,7 @@
           <label class="form-check-label fs14">{{.}}</label>
         </div>
         {{end}}
-        <div class="apply-bttn d-hide"><button class="btn btn-sm btn-outline-secondary">[[[apply]]]</button></div>
+        <div class="apply-bttn d-hide"><button class="small">[[[apply]]]</button></div>
       </div>
       <div class="filter-display">[[[Assets]]]</div>
       <div id="assetFilter" class="filter-opts">
@@ -23,7 +23,7 @@
           <label class="form-check-label fs14">{{$asset.Symbol}}</label>
         </div>
         {{end}}
-        <div class="apply-bttn d-hide"><button class="btn btn-sm btn-success">[[[apply]]]</button></div>
+        <div class="apply-bttn d-hide"><button class="small go">[[[apply]]]</button></div>
       </div>
       <div class="filter-display">[[[Status]]]</div>
       <div id="statusFilter" class="filter-opts">
@@ -33,15 +33,15 @@
           <label class="form-check-label fs14">{{$statusString}}</label>
         </div>
         {{end}}
-        <div class="apply-bttn d-hide"><button class="btn btn-sm btn-success">[[[apply]]]</button></div>
+        <div class="apply-bttn d-hide"><button class="small go">[[[apply]]]</button></div>
       </div>
       <div id="exportOrders" class="text-center">
-        <button class="btn btn-sm btn-outline-secondary">[[[Export Trades]]]</button>
+        <button class="small">[[[Export Trades]]]</button>
       </div>
       <hr class="dashed mb-3">
       <div class="demi text-center px-4 mb-2">[[[other_actions]]]</div>
       <div id="deleteArchivedRecords">
-        <button class="btn btn-sm btn-outline-danger">[[[delete_archived_records]]]</button>
+        <button class="small danger">[[[delete_archived_records]]]</button>
       </div>
     </div>
     <div class="flex-grow-1 p-3">
@@ -129,7 +129,7 @@
         <div id="archivedRecordsLocation" class="fs15 d-hide text-break mb-2"></div>
       </div>
       <div class="d-flex justify-content-end">
-        <button id="deleteArchivedRecordsSubmit" type="button" class="btn btn-danger">[[[Submit]]]</button>
+        <button id="deleteArchivedRecordsSubmit" type="button" class="danger">[[[Submit]]]</button>
       </div>
       <div id="deleteArchivedRecordsErr" class="fs15 pt-3 text-center d-hide text-danger text-break"></div>
     </form>
